--- a/Sample_MVC_Test/Sample_MVC_Test.csproj
+++ b/Sample_MVC_Test/Sample_MVC_Test.csproj
@@ -126,6 +126,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProcessController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -147,6 +148,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
+    <Folder Include="Views\Process\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
