Added Employee Controller

--- a/Sample_MVC_Test/Sample_MVC_Test.csproj
+++ b/Sample_MVC_Test/Sample_MVC_Test.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProcessController.cs" />
     <Compile Include="Global.asax.cs">
@@ -147,6 +148,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Employee\" />
     <Folder Include="Views\Home\" />
     <Folder Include="Views\Process\" />
   </ItemGroup>
